Aw, IE6 doesn't implement <blink>

--- a/graceless-degredation.css
+++ b/graceless-degredation.css
@@ -1,2 +1,2 @@
 * { font-family: "Comic Sans MS" !important }
-B,I,STRONG,U { text-decoration: blink }
+/* B,I,STRONG,U { text-decoration: blink } */
